# nusdas

./: INSTALL  InstNaps8.rb.in  Makefile.in  README.md  aclocal.m4  config.guess  configure  configure.in
doc/: Makefile  Zbuild.sh  api2.tex  capi.tex  capi_bfclose.tex  capi_bfgetpos.tex  capi_bfopen.tex  capi_bfread.tex  capi_bfread_native.tex  capi_bfseek.tex  capi_bfsetpos.tex  capi_bfwrite.tex  capi_bfwrite_native.tex  capi_endian_swab2.tex  capi_endian_swab4.tex  capi_endian_swab8.tex  capi_endian_swab_fmt.tex  capi_n_decode_rlen_nbit_i1.tex  capi_n_encode_rlen_8bit.tex  capi_n_encode_rlen_8bit_i1.tex  capi_nusdas_allfile_close.tex  capi_nusdas_cut.tex  capi_nusdas_cut2.tex  capi_nusdas_cut2_raw.tex  capi_nusdas_cut_raw.tex  capi_nusdas_esf_flush.tex  capi_nusdas_grid.tex  capi_nusdas_grid2.tex  capi_nusdas_gunzip.tex  capi_nusdas_gunzip_nbytes.tex  capi_nusdas_gzip.tex  capi_nusdas_info.tex  capi_nusdas_info2.tex  capi_nusdas_inq_cntl.tex  capi_nusdas_inq_cntl2.tex  capi_nusdas_inq_data.tex  capi_nusdas_inq_data2.tex  capi_nusdas_inq_def.tex  capi_nusdas_inq_nrdbtime.tex  capi_nusdas_inq_nrdvtime.tex  (+162 more)
nusview/: Makefile.in  aclocal.m4  config.h.in  configure  configure.in  dirsub.c  getgrids.c  glue.c  listtype.c  nus_gzlib.c  nus_gzlib.h  nuscntl.c  nusdim.h  nusdir.c  nusdir.h  nusdump.c  nusdump_rawgz.c  nusinfo.c  nusinqdata.c  nusinqdef.c  nusinqnz.c  nusispec.c  nusmeta.c  nusrgau.c  nusrgaujn.c  nussigm.c  nussubc_srf.c  nussubcinfo.c  nustdif.c  nuszhyb.c  panpath.c  rbr.h  rbr_libs.c  setenv.c  stringplus.c  stringplus.h  textout.c  textout.h
(+519 files in other folders)
